# Systems-of-equations

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  compare.cpp  compare_GMRES.cpp  compare_PCG_CG.cpp  compare_ellipse_matrix.cpp  compare_symmetric.cpp  main.cpp  matrix.cpp  matrix_operations.cpp  solver.cpp  symmetric_solver.cpp  timer.cpp
1/: main.cpp  solver.hpp  test.hpp
2/: CMakeLists.txt  CMakePresets.json  main.cpp
2/graphs/: data.txt  graph.py
2/src/: CMakeLists.txt  csr_matrix.hpp  full_matrix.hpp
2/tests/: CMakeLists.txt  small_test.cpp
3/: CMakeLists.txt  CMakePresets.json
graphs/: GMRES_m.py  graph_2.py  graph_4_5.py  graph_PCG_CG.py  graph_ellips.py  graph_sym.py  iter_data.txt  time_chebyshev.txt  time_gauss.txt  time_jacobi.txt  time_mpi.txt
src/: CMakeLists.txt  Chebyshev_speed_symmetry.hpp  GMRES.hpp  Iteration_solver.hpp  MPI_speed.hpp  QR_matrix.hpp  Steps_for_chebyshev.hpp  csr_matrix.hpp  matrix.hpp  matrix_for_preconditioning.hpp  matrix_generator.hpp  pre_CG.hpp  solver.hpp  test.hpp
tests/: CMakeLists.txt  small_test_1.cpp  small_test_2.cpp  small_test_3.cpp
