find_package(GTest REQUIRED)
include(GoogleTest)
add_executable(small_test_1 small_test_1.cpp)
target_link_libraries(small_test_1 PRIVATE matrix_lib GTest::gtest_main)
gtest_discover_tests(small_test_1)
add_executable(small_test_2 small_test_2.cpp)
target_link_libraries(small_test_2 PRIVATE matrix_lib GTest::gtest_main)
gtest_discover_tests(small_test_2)
add_executable(small_test_3 small_test_3.cpp)
target_link_libraries(small_test_3 PRIVATE matrix_lib GTest::gtest_main)
gtest_discover_tests(small_test_3)